InlineObject renamed to EventsModel for clarity
